Fix side scroll on mobile venue page.

--- a/static/css/apps/venue.less
+++ b/static/css/apps/venue.less
@@ -137,6 +137,10 @@
 
     .venue {
 
+        .grid {
+            margin: 0;
+        }
+
         #venue-shape2, #venue-shape7 {
             display: none;
         }
